[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["Gar Morley <garmorley@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gar/hypermodern-python"
repository = "https://github.com/gar/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
